gallery pages fix; blog pages fix;

--- a/app/pug/gallery-opened.pug
+++ b/app/pug/gallery-opened.pug
@@ -46,25 +46,25 @@ html(lang="en")
         section.gallery-opened-content
             .container
                 #lightgallery
-                    a.lightgallery__item(href="images/gallery/IMG_1.jpg")
+                    a.lightgallery__item(href="images/gallery/IMG_1.jpg" data-aos="fade-up" data-aos-duration="1500")
                         img.img-responsive(src="images/gallery/IMG_1.jpg")
-                    a.lightgallery__item(href="images/gallery/IMG_2.jpg")
+                    a.lightgallery__item(href="images/gallery/IMG_2.jpg" data-aos="fade-up" data-aos-duration="1500")
                         img.img-responsive(src="images/gallery/IMG_2.jpg")
-                    a.lightgallery__item(href="images/gallery/IMG_3.jpg")
-                        img.img-responsive(src="images/gallery/IMG_3.jpg")
-                    a.lightgallery__item(href="images/gallery/IMG_4.jpg")
+                    a.lightgallery__item(href="images/gallery/IMG_3.jpg" data-aos="fade-up" data-aos-duration="1500")
+                        img.img-responsive(src="images/gallery/IMG_3.jpg" )
+                    a.lightgallery__item(href="images/gallery/IMG_4.jpg" data-aos="fade-up" data-aos-duration="1500")
                         img.img-responsive(src="images/gallery/IMG_4.jpg")
-                    a.lightgallery__item(href="images/gallery/IMG_5.jpg")
+                    a.lightgallery__item(href="images/gallery/IMG_5.jpg" data-aos="fade-up" data-aos-duration="1500")
                         img.img-responsive(src="images/gallery/IMG_5.jpg")
-                    a.lightgallery__item(href="images/gallery/IMG_6.jpg")
+                    a.lightgallery__item(href="images/gallery/IMG_6.jpg" data-aos="fade-up" data-aos-duration="1500")
                         img.img-responsive(src="images/gallery/IMG_6.jpg")
-                    a.lightgallery__item(href="images/gallery/IMG_7.jpg")
+                    a.lightgallery__item(href="images/gallery/IMG_7.jpg" data-aos="fade-up" data-aos-duration="1500")
                         img.img-responsive(src="images/gallery/IMG_7.jpg")
-                    a.lightgallery__item(href="images/gallery/IMG_8.jpg")
+                    a.lightgallery__item(href="images/gallery/IMG_8.jpg" data-aos="fade-up" data-aos-duration="1500")
                         img.img-responsive(src="images/gallery/IMG_8.jpg")
-                    a.lightgallery__item(href="images/gallery/IMG_9.jpg")
+                    a.lightgallery__item(href="images/gallery/IMG_9.jpg" data-aos="fade-up" data-aos-duration="1500")
                         img.img-responsive(src="images/gallery/IMG_9.jpg")
-                    a.lightgallery__item(href="images/gallery/IMG_10.jpg")
+                    a.lightgallery__item(href="images/gallery/IMG_10.jpg" data-aos="fade-up" data-aos-duration="1500")
                         img.img-responsive(src="images/gallery/IMG_10.jpg")
                     
 
