--- a/app/pug/gallery.pug
+++ b/app/pug/gallery.pug
@@ -48,7 +48,7 @@ html(lang="en")
                             h2.logo__title На Сенной
                             h4.logo__headline Полтава ул. Сенная, 19
                             a(href="gallery-opened.html").link Смотреть фото 
-                    .picture
+                    a(href="#").picture
                         img(src="images/objects/object_img1.jpg", alt="ЖК 'На Сенной'")
                         .picture__icon-wrap
                             svg.icon
@@ -63,7 +63,7 @@ html(lang="en")
                             h2.logo__title Остров
                             h4.logo__headline Миргород ул. Гоголя, 77
                             a(href="gallery-opened.html").link Смотреть фото 
-                    .picture
+                    a(href="#").picture
                         img(src="images/objects/object_img1.jpg", alt="ЖК 'На Сенной'")
                         .picture__icon-wrap
                             svg.icon
@@ -93,13 +93,13 @@ html(lang="en")
                             h2.logo__title Победы
                             h4.logo__headline Миргород ул. Победы, 10
                             a(href="gallery-opened.html").link Смотреть фото 
-                    .picture
+                    a(href="#").picture
                         img(src="images/objects/object_img1.jpg", alt="ЖК 'На Сенной'")
                         .picture__icon-wrap
                             svg.icon
                                 use(xlink:href="images/main-page_icons-sprite.svg#eye")
                 // OBJECT END
-
+        include object/paginationWP.pug
 
 
         
