--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -32,6 +32,7 @@ body {
     position: relative;
     font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
     color: $default-button-text-color;
+    background: #f5f5f4;
 }
 
 input {
