--- a/app/scss/modules/_page-gallery.scss
+++ b/app/scss/modules/_page-gallery.scss
@@ -35,6 +35,9 @@
     display: flex;
     flex-direction: column;
     background: #f5f5f4;
+    @media (min-width: 1025px) {
+        padding: 0;
+    }
     .container {
         padding: 0;
     }
@@ -47,7 +50,8 @@
         //height: 600px;
         @media (min-width: 1025px) {
             margin: 0;
-            height: 500px;
+            min-height: 500px;
+            max-height: 700px;
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 1fr;
             &:nth-child(2n) {
@@ -104,8 +108,20 @@
         position: relative;
         justify-content: center;
         display: flex;
+        &:hover {
+            img {
+                transform: scale(1.1);
+                box-shadow: inset 14px 3px 170px -82px rgba(0, 0, 0, 0.75);
+            }
+            .picture__icon-wrap {
+                filter: invert(1);
+            }
+        }
         img {
-            @include size(130%, auto);
+            width: 100%;
+            min-height: 500px;
+            max-height: 700px;
+            transition: all 1s linear;
         }
         @include size(100%, auto);
         overflow: hidden;
@@ -115,9 +131,6 @@
             background: #FFFFFF;
             transform: translateX(-50%) translateY(-50%);
             transition: all .3s;
-            &:hover {
-                filter: invert(1);
-            }
             .icon {
                 @include size(40px);
                 @media (min-width: 1025px) {
