--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -5,202 +5,186 @@
     color: $tw;
 }
 
+.alert__text {
+    font-size: 11px;
+}
+
 .contact-form {
-    .alert__text {
-        font-size: 11px;
+    .wpcf7 {
+        width: 100%;
+        grid-column: 1/13;
+        grid-row: 2/3;
     }
-    &__headline {
-        font-style: normal;
-        font-weight: normal;
+    form {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        @media (min-width: 1025px) {
+            gap: 40px;
+        }
+        //overflow: hidden;
+        label {
+            grid-column: span 12;
+            @media (min-width: 1025px) {
+                grid-column: span 4;
+            }
+        }
+    }
+}
+
+.contact-form__headline {
+    font-style: normal;
+    font-weight: normal;
+    grid-column: 1 / 13;
+    grid-row: 1 / 2;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 40px;
+    font-size: 24px;
+    line-height: 29px;
+    @media (min-width: 1025px) {
         font-size: 36px;
         line-height: 44px;
-        grid-column: 1 / 13;
-        grid-row: 1 / 2;
-        text-transform: uppercase;
-        text-align: center;
-        margin-bottom: 40px;
-        @media (max-width: 576px) {
-            font-size: 24px;
-            line-height: 29px;
-        }
-        @media (max-width: 812px) and (orientation: landscape) {
-            font-size: 24px;
-            line-height: 29px;
-        }
     }
-    &__title {
-        display: flex;
-        flex-direction: column;
-        text-transform: uppercase;
-        font-size: 1.25rem;
-        position: relative;
-        @media (max-width: 576px) {
-            font-weight: normal;
-            font-size: 16px;
-            line-height: 20px;
-            margin: 0;
-        }
-        @media (max-width: 812px) and (orientation: landscape) {
-            font-weight: normal;
-            font-size: 18px;
-            line-height: 20px;
-            margin: 0;
-        }
-        @media (max-width: 1024px) {
-            font-size: .9rem;
-        }
-        &:nth-child(2) {
-            grid-column: 1 / 5;
-            grid-row: 2 / 3;
-            @media (max-width: 576px) {
-                grid-column: 1 / 13;
-                grid-row: 2 / 3;
-            }
-            @media (max-width: 812px) and (orientation: landscape) {
-                grid-column: 2 / 12;
-                grid-row: 2 / 3;
-            }
-        }
-        &:nth-child(3) {
-            grid-column: 5 / 9;
-            grid-row: 2 / 3;
-            @media (max-width: 576px) {
-                grid-column: 1 / 13;
-                grid-row: 3 / 4;
-            }
-            @media (max-width: 812px) and (orientation: landscape) {
-                grid-column: 2 / 12;
-                grid-row: 3 / 4;
-            }
-        }
-        &:nth-child(4) {
-            grid-column: 9 / 13;
-            grid-row: 2 / 3;
-            @media (max-width: 576px) {
-                grid-column: 1 / 13;
-                grid-row: 4 / 5;
-            }
-            @media (max-width: 812px) and (orientation: landscape) {
-                grid-column: 2 / 12;
-                grid-row: 4 / 5;
-            }
-        }
+}
+
+.contact-form__title {
+    display: flex;
+    flex-direction: column;
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 20px;
+    position: relative;
+    margin-bottom: 30px;
+    @media (min-width: 1025px) {
+        font-size: 24px;
+        line-height: 29px;
+        margin-bottom: 0;
     }
-    &__field {
-        margin: 1rem 0 0;
-        font-size: 1rem;
-        line-height: 1.2rem;
-        background: transparent;
-        border-bottom: 2px solid #FFFFFF;
-        padding: .2rem 0;
-        color: #FFFFFF;
-        position: relative;
-        &--red {
-            border-color: #EB5757;
-        }
-        @media (max-width: 576px) {
-            padding: 0;
-        }
-        @media (max-width: 812px) and (orientation: landscape) {
-            padding: 0;
-        }
+}
+
+.contact-form__field {
+    width: 100%;
+    // margin: 1rem 0 0;
+    font-size: 24px;
+    line-height: 29px;
+    background: transparent;
+    border-bottom: 2px solid #FFFFFF;
+    padding: 19px 0 0;
+    color: #FFFFFF;
+    position: relative;
+    &--red {
+        border-color: #EB5757;
     }
-    &__custom-check {
-        cursor: pointer;
-        @include pos($t: 2px, $l: -30px);
-        @include size(20px);
-        //transform: translateY(-50%);
-        background: #FFFFFF;
-        border: 1px solid #828282;
-        border-radius: 3px;
-        transition: all .3s;
-        &:after {
-            content: "";
-            display: none;
-            @include pos($t: 1px, $l: 5px);
-            border: solid #828282;
-            border-width: 0 3px 3px 0;
-            @include size(5px, 10px);
-            transform: rotate(45deg);
-        }
+    @media (max-width: 576px) {
+        padding: 0;
     }
-    &__checkbox {
-        grid-column: 2 / 7;
-        grid-row: 3 / 4;
-        position: relative;
-        word-wrap: break-word;
-        display: inline;
-        line-height: 1.2rem;
-        text-transform: uppercase;
+    @media (max-width: 812px) and (orientation: landscape) {
+        padding: 0;
+    }
+}
+
+.contact-form__custom-check {
+    cursor: pointer;
+    @include pos($t: 50%, $l: -30px);
+    @include size(20px);
+    transform: translateY(-50%);
+    background: #FFFFFF;
+    border: 1px solid #828282;
+    border-radius: 3px;
+    transition: all .3s;
+    z-index: 2;
+}
+
+.contact-form__custom-icon {
+    //content: "";
+    display: none;
+    @include pos($t: 50%, $l: -22px);
+    border: solid #828282;
+    border-width: 0 3px 3px 0;
+    @include size(5px, 10px);
+    transform: translateY(-50%) rotate(45deg);
+    z-index: 3;
+}
+
+.active__check {
+    background: $link-pressed;
+}
+
+.contact-form__checkbox {
+    grid-column: 3/12;
+    margin-bottom: 40px;
+    @media (min-width: 1025px) {
+        grid-column: 2 / 8;
         margin-top: 100px;
-        cursor: pointer;
-        @media (max-width: 1366px) {
-            grid-column: 2 / 8;
-        }
-        @media (max-width: 1200px) {
-            grid-column: 2 / 8;
-        }
-        @media (max-width: 576px) {
-            grid-column: 2 / 13;
-            grid-row: 5 / 6;
-            margin: 30px 0 0 0;
-            font-size: 12px;
-            line-height: 15px;
-        }
-        @media (max-width: 812px) and (orientation: landscape) {
-            grid-column: 2 / 12;
-            grid-row: 5 / 6;
-            margin-top: 30px;
-        }
-        &:hover {
-            ~.contact-form__custom-check {
-                background: $bb-pressed;
-            }
-        }
-        input {
-            @include pos($l: -9999px);
-            &:checked {
-                ~.contact-form__custom-check {
-                    background: $link-pressed;
-                }
-                ~.contact-form__custom-check:after {
-                    display: block;
-                }
-            }
-        }
-        label {
-            display: inline-block;
-            font-size: 1rem;
+        margin-bottom: 0;
+    }
+    // grid-row: 3 / 4;
+    position: relative;
+    word-wrap: break-word;
+    display: inline;
+    line-height: 1.2rem;
+    text-transform: uppercase;
+    transition: all .3s;
+    &:hover {
+        .contact-form__custom-check {
+            background: $bb-pressed;
+            // border-color: #fff3a6;
         }
     }
-    &__link {
-        display: inline;
-        width: 100%;
-        text-decoration: underline;
+    input {
+        @include pos($l: -9999px);
+    }
+    .wpcf7-list-item-label {
+        font-size: 12px;
+        line-height: 15px;
         transition: all .3s;
-        &:hover {
-            color: #828282;
-            text-decoration: underline;
+        cursor: pointer;
+        // &:hover {
+        //     color: #828282;
+        // }
+        @media (min-width: 1025px) {
+            font-size: 19px;
+            line-height: 23px;
         }
     }
-    &__btn {
-        grid-column: 9 / 12;
-        grid-row: 3 / 4;
-        @media (max-width: 576px) {
-            grid-column: 1 / 13;
-            grid-row: 6 / 7;
-            justify-self: center;
-            margin-top: 30px;
-        }
-        @media (max-width: 812px) and (orientation: landscape) {
-            grid-column: 1 / 13;
-            grid-row: 6 / 7;
-            justify-self: center;
-            margin-top: 30px;
-        }
-        height: 4rem;
-        align-self: flex-end;
-        padding: 0 1rem;
-        //text-transform: uppercase;
+    .wpcf7-checkbox {
+        display: inline;
     }
+    .contact-form__link {
+        display: inline;
+        font-size: 12px;
+        line-height: 15px;
+        @media (min-width: 1025px) {
+            font-size: 19px;
+            line-height: 23px;
+        }
+    }
+}
+
+.contact-form__link {
+    display: inline;
+    width: 100%;
+    text-decoration: underline;
+    transition: all .3s;
+    font-size: 19px;
+    line-height: 23px;
+    &:hover {
+        color: #828282;
+        text-decoration: underline;
+    }
+}
+
+.contact-form__btn,
+.wpcf7-submit {
+    grid-column: 3/10;
+    text-transform: uppercase;
+    @media (min-width: 1025px) {
+        grid-column: 9/ 11;
+        text-transform: initial;
+    }
+    line-height: 50px;
+    height: 50px;
+    align-self: flex-end;
+    padding: 0 1rem;
 }
